# Wisconsin-Autonomous-ROS-Challenge

./: README.md
merge_arrays/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
merge_arrays/install/merge_arrays/lib/merge_arrays/: merge_arrays_node
merge_arrays/install/merge_arrays/share/merge_arrays/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
merge_arrays/src/merge_arrays/: package.xml  setup.py
merge_arrays/src/merge_arrays/merge_arrays/: merge_arrays_node.py
