<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>merge_arrays</name>
  <version>0.0.0</version>
  <description>This package contains a node that will merge two arrays contain int32 values in descending order</description>
  <maintainer email="nclessard@wisc.edu">ubuntu</maintainer>
  <license>See W.A. Team License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
